--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Joseph March</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -25,7 +25,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
-                
+                test.
             </section>
 
             <!--==================== ABOUT ====================-->
