--- a/index.html
+++ b/index.html
@@ -50,4 +50,12 @@
             </section>
         </details>
     </nav>
+
+    <main>
+        <h2 id='About me'>
+        </h2>
+        <p>A list of changes and updates to our projects.</p>
+
+    </main>
 </body>
+
