--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <main>
         <h2 id='About me'>
+            About me
         </h2>
         <p>A list of changes and updates to our projects.</p>
 
