--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name='thumbnail' content='https://100r.co/media/services/rss.jpg'/>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <link rel='alternate' type='application/rss+xml' title='RSS Feed' href='../links/rss.xml'/>
-    <link rel='stylesheet' type='text/css' href='../links/main.css'>
+    <link rel='stylesheet' type='text/css' href='main.css'>
     <link rel='shortcut icon' type='image/png' href='../media/services/shortcut.png'>
     <title>100R &mdash; home</title>
 </head>
