--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href='home.html'>
-            <img src='../media/interface/logo.svg' alt='100R' height='50'>
+            <img src='website_name.svg' alt='100R' height='50'>
         </a>
     </header>
     <nav>
