--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta charset='utf-8'>
-    <meta name='thumbnail' content='https://100r.co/media/services/rss.jpg'/>
+    <meta name='thumbnail' content='website_logo.svg'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <link rel='alternate' type='application/rss+xml' title='RSS Feed' href='../links/rss.xml'/>
     <link rel='stylesheet' type='text/css' href='main.css'>
