--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <h2 id='About me'>
             About me
         </h2>
-        <p>I am Joseph March, currently a PhD student at the School of Computer Science and Technology, University of Cambridge under the supervision of Prof. Rafal Maniuk in the Graphics and Display group. My research interests centre around defining and applying the limits of the human visual system in the context of computer graphics.
+        <p>I am Joseph March, currently a PhD student at the School of Computer Science and Technology, University of Cambridge under the supervision of Prof. Rafal Maniuk in the Graphics and Display group. My research interests centre around defining and applying the limits of the human visual system in the context of computer graphics.</p>
             
-            Currently my research revolves around trying to establish the perceptual limits of the human visual system when viewing realistic content. In order to carry out my research, I lead the development and maintenance of the Cambridge high-dynamic-range multi-focal stereoscopic (HDR MF S) display. </p>
+        <p>Currently my research revolves around trying to establish the perceptual limits of the human visual system when viewing realistic content. In order to carry out my research, I lead the development and maintenance of the Cambridge high-dynamic-range multi-focal stereoscopic (HDR MF S) display.</p>
 
     </main>
 </body>
