--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
 
         <p> March, J., Krishnan, A., Mantiuk, R., & Watt, S. (in press). Impact of focus cue presentation on perceived
             realism of 3-D scene structure: implications for scene perception and for display technology. Journal of
-            Vision.</p>
+            Vision. </p>
 
         <p> March, J., Krishnan, A., Watt, S., Wernikowski, M., Gao, H., Yöntem, A. Ö., & Mantiuk, R. (2022). Impact
             of correct and simulated focus cues on perceived realism. SA ’22: SIGRAPH Asia 2022, Article 22.
-            https://doi.org/10.1145/3550469.3555405<\p>
+
+            <a href="https://doi.org/10.1145/3550469.3555405 ">https://doi.org/10.1145/3550469.3555405 </a>
+        
+        </p>
         
     </main>
 </body>
