--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
                         </li>
                     </ul>
                 </section>
+                <section>
+                    <h2>
+                        <a id='knowledge'>Research Projects</a>
+                    </h2>
+                    <ul class='nobull capital'>
+                        <li>
+                            <a href='https://www.cl.cam.ac.uk/research/rainbow/projects/focus_cues/'>Focus cues for realism</a>
+                        </li>
+                        <li>
+                            <a href='liveaboard.html'>HDR-MF-S Display</a>
+                        </li>
+                    </ul>
+                </section>
+
             </section>
         </details>
     </nav>
