--- a/index.html
+++ b/index.html
@@ -22,30 +22,11 @@
                 <section>
                     <ul class='nobull capital'>
                         <li>
-                            <a href='about_us.html'>about us</a>
+                            <a href='about_us.html'>about me</a>
                         </li>
                         <li>
-                            <a href='mission.html'>mission</a>
+                            <a href='mission.html'>images</a>
                         </li>
-                        <li>
-                            <a href='philosophy.html'>philosophy</a>
-                        </li>
-                        <li>
-                            <a href='pino.html'>pino</a>
-                        </li>
-                        <li>
-                            <a href='videos.html'>videos</a>
-                        </li>
-                        <li>
-                            <a href='support.html'>support</a>
-                        </li>
-                        <li>
-                            <a href='store.html'>store</a>
-                        </li>
-                        <li>
-                            <a href='press.html'>press</a>
-                        </li>
-                    </ul>
                 </section>
                 <section>
                     <h2>
@@ -53,13 +34,54 @@
                     </h2>
                     <ul class='nobull capital'>
                         <li>
+                            <a href='liveaboard.html'>HDR-MF-S Display</a>
+                        </li>
+                        <li>
                             <a href='https://www.cl.cam.ac.uk/research/rainbow/projects/focus_cues/'>Focus cues for realism</a>
                         </li>
                         <li>
-                            <a href='liveaboard.html'>HDR-MF-S Display</a>
+                            <a href='https://github.com/joemarch010/NiLBS'>Neural Inverse Linear Blend Skinning</a>
                         </li>
                     </ul>
                 </section>
+                
+                <section>
+                    <h2>
+                        <a id='knowledge'>Additional Computer Projects</a>
+                    </h2>
+                    <ul class='nobull capital'>
+                        <li>
+                            <a href=''>R2 Framework</a>
+                        </li>
+                        <li>
+                            <a href=''>R2 Platformer</a>
+                        </li>
+                        <li>
+                            <a href=''>R2 RPG</a>
+                        </li>
+                        <li>
+                            <a href=''>R2 Text Editor</a>
+                        </li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>
+                        <a id='knowledge'>Artistic Projects</a>
+                    </h2>
+                    <ul class='nobull capital'>
+                        <li>
+                            <a href=''>Drawing</a>
+                        </li>
+                        <li>
+                            <a href=''>Painting</a>
+                        </li>
+                        <li>
+                            <a href=''>3D Printing</a>
+                        </li>
+                    </ul>
+                </section>
+
 
             </section>
         </details>
