--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </h2>
                     <ul class='nobull capital'>
                         <li>
-                            <a href='pages/research/hdrmfs.html'>HDR-MF-S Display</a>
+                            <a href='hdrmfs.html'>HDR-MF-S Display</a>
                         </li>
                         <li>
                             <a href='https://www.cl.cam.ac.uk/research/rainbow/projects/focus_cues/'>Focus cues for realism</a>
