--- a/hdrmfs.html
+++ b/hdrmfs.html
@@ -7,7 +7,7 @@
                     <link rel='alternate' type='application/rss+xml' title='RSS Feed' href='../links/rss.xml'/>
                     <link rel='stylesheet' type='text/css' href='main.css'>
                         <link rel='shortcut icon' type='image/png' href='../media/services/shortcut.png'>
-                            <title>100R &mdash; home</title>
+                            <title>JM &mdash; home</title>
     </head>
     <body>
         <header>
