--- a/hdrmfs.html
+++ b/hdrmfs.html
@@ -25,7 +25,7 @@
                                 <a href='index.html'>home</a>
                             </li>
                             <li>
-                                <a href='mission.html'>images</a>
+                                <a href='images.html'>images</a>
                             </li>
                     </section>
                     <section>
@@ -51,16 +51,16 @@
                         </h2>
                         <ul class='nobull capital'>
                             <li>
-                                <a href=''>R2 Framework</a>
+                                <a href='R2Framework.html'>R2 Framework</a>
                             </li>
                             <li>
-                                <a href=''>R2 Platformer</a>
+                                <a href='R2Platformer.html'>R2 Platformer</a>
                             </li>
                             <li>
-                                <a href=''>R2 RPG</a>
+                                <a href='R2RPG.html'>R2 RPG</a>
                             </li>
                             <li>
-                                <a href=''>R2 Text Editor</a>
+                                <a href='R2TextEditor.html'>R2 Text Editor</a>
                             </li>
                         </ul>
                     </section>
@@ -71,13 +71,13 @@
                         </h2>
                         <ul class='nobull capital'>
                             <li>
-                                <a href=''>Drawing</a>
+                                <a href='Drawing.html'>Drawing</a>
                             </li>
                             <li>
-                                <a href=''>Painting</a>
+                                <a href='Painting.html'>Painting</a>
                             </li>
                             <li>
-                                <a href=''>3D Printing</a>
+                                <a href='3DPrinting.html'>3D Printing</a>
                             </li>
                         </ul>
                     </section>
