--- a/R2TextEditor.html
+++ b/R2TextEditor.html
@@ -11,7 +11,7 @@
                         </head>
     <body>
         <header>
-            <a href='home.html'>
+            <a href='index.html'>
                 <img src='website_name.svg' alt='JM' height='50'>
             </a>
         </header>
